test/1.2/errors/T_EUNINITIALIZED.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

// Sites are off, but at least we do get error context

port p {
    /// ERROR EUNINITIALIZED
    if (defined $banks) {
    }
}

bank b0 {
    /// ERROR EUNINITIALIZED
    if (defined $mapped_registers) {}
}

bank b1 {
    /// ERROR EUNINITIALIZED
    if (defined $unmapped_registers) {}
}

bank b2 {
    /// ERROR EUNINITIALIZED
    if (defined $numbered_registers) {}
}

connect c {
    /// ERROR EUNINITIALIZED
    if (defined $interfaces) {}
}
